--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "watch:css": "postcss src/assets/global.pcss -o static/global.css -w",
     "watch:dev": "sapper dev",
     "build": "run-s build:css build:sapper",
-    "build:css": "NODE_ENV=production postcss src/assets/global.pcss -o static/global.css",
+    "build:css": "SET NODE_ENV=production postcss src/assets/global.pcss -o static/global.css",
     "build:sapper": "sapper build --legacy",
     "build:export": "sapper export --legacy",
     "export": "run-s build:css build:export",
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
+    "npm-run-all": "^4.1.5",
     "polka": "next",
     "sirv": "^1.0.0"
   },
@@ -28,12 +29,14 @@
     "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/runtime": "^7.0.0",
+    "@fullhuman/postcss-purgecss": "^3.0.0",
     "@rollup/plugin-babel": "^5.0.0",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-replace": "^2.2.0",
     "autoprefixer": "^10.0.1",
     "cssnano": "^4.1.10",
+    "postcss": "^8.1.1",
     "postcss-cli": "^8.0.0",
     "postcss-import": "^12.0.1",
     "postcss-load-config": "^3.0.0",
